# climate-cost-index

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
api/: database.py  main.py  models.py
config/: __init__.py  components.py  confidence_grades.py  fips_codes.py  settings.py
ingest/: __init__.py  base.py  bls_ce.py  bls_cpi_food.py  cdc_epht.py  census_acs.py  census_blocks.py  eia_energy.py  epa_airnow.py  fema_ha.py  fema_ia.py  fema_nfhl.py  ncei_storms.py  noaa_hms.py  noaa_ncei.py  usdm_drought.py  usfs_wildfire.py  utils.py
pipeline/: run_full.py  run_ingest.py  run_score.py  run_transform.py  run_validate.py
score/: __init__.py  acceleration.py  cci_dollar.py  cci_national.py  cci_strain.py  center.py  composite.py  missingness.py  overlap.py  percentile.py  pipeline.py  transform_inputs.py  universe.py  winsorize.py
scripts/: verify_degree_days.py  verify_extreme_heat.py  verify_flood_zone_scoring.py
sensitivity/: alt_weighting.py  baseline_comparison.py  correlation_threshold.py  jackknife.py  normalization_compare.py  ranking_utils.py  report.py  severity_perturbation.py  weight_perturbation.py  window_sensitivity.py
tests/: test_scaffold.py
transform/: air_quality_scoring.py  degree_days.py  drought_scoring.py  energy_attribution.py  event_severity_tiers.py  extreme_heat.py  fema_ia_burden.py  flood_zone_scoring.py  harmonize.py  health_burden.py  monitor_to_county.py  spatial_gap_fill.py  station_to_county.py  storm_severity.py  wildfire_scoring.py
validate/: convergent_divergent.py  external_criteria.py  report.py  (+1 more)
(+51 files in other folders)
