[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cci"
version = "1.0.0"
description = "Climate Cost Index — composite household-level metric for climate-linked cost pressure across U.S. counties"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "geopandas>=0.14",
    "rasterio>=1.3",
    "rasterstats>=0.19",
    "shapely>=2.0",
    "requests>=2.31",
    "httpx>=0.25",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pydantic>=2.5",
    "duckdb>=0.9",
    "pyarrow>=14.0",
    "dcor>=0.6",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["config*", "pipeline*", "ingest*", "transform*", "score*", "sensitivity*", "validate*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py311"]
